# rpc_doc

./: .gitignore  CMakeLists.txt  README.md  note.md
conf/: rocket.xml  rocket_client.xml
generator/: rocket_generator.py
generator/template/: cmake.template  main.cc.template
protobuf/: order.proto
rocket/common/: config.cc  config.h  log.cc  log.h  msg_util.cc  msg_util.h  mutex.h  run_time.cc  run_time.h  util.cc  util.h
rocket/net/: abstract_coder.h  abstract_protocol.h  eventloop.cc  eventloop.h  fd_event.cc  fd_event.h  fd_event_group.cc  fd_event_group.h  fdevent.cc  fdevent.h  io_thread.cc  io_thread.h  io_thread_group.cc  io_thread_group.h  string_coder.h  timer.cc  timer.h  timer_event.cc  timer_event.h  wakeup_fd_event.cc  wakeup_fd_event.h
rocket/net/coder/: abstract_coder.h  abstract_protocol.h  string_coder.h  tinypb_coder.cc  tinypb_coder.h  tinypb_protocol.cc  tinypb_protocol.h
rocket/net/rpc/: readme.md  rpc_channel.cc  rpc_channel.h  rpc_closure.h  rpc_controller.cc  rpc_controller.h  rpc_dispatcher.cc  rpc_dispatcher.h
rocket/net/tcp/: net_addr.cc  net_addr.h  tcp_acceptor.cc  tcp_acceptor.h  tcp_buffer.cc  tcp_buffer.h  tcp_client.cc  tcp_client.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h
testcases/: example.cc  example_client.cc  example_server.cc  test.cc  test_client.cc  test_eventloop.cc  test_log.cc  test_rpc_client.cc  test_rpc_server.cc  test_tcp.cc
